compiler/e2e/test/snapshot/semantic_element/implements_qualified_identifier/invalid_symbol/snapshot.snap
---
source: compiler/e2e/test/snapshot/mod.rs
expression: clean_run
---
stderr:
error: the symbol cannot be implemented
   ╭─ compiler/e2e/test/snapshot/semantic_element/implements_qualified_identifier/invalid_symbol/main.pnx:16:12
   │
16 │ implements Direction::North:
   │            ^^^^^^^^^^^^^^^^ the symbol `variant main::Direction::North` cannot be implemented
   │
   = only `trait`, `marker`, `enum`, or `struct` can be implemented

error: the symbol cannot be implemented
   ╭─ compiler/e2e/test/snapshot/semantic_element/implements_qualified_identifier/invalid_symbol/main.pnx:20:12
   │
20 │ implements math:
   │            ^^^^ the symbol `module main::math` cannot be implemented
   │
   = only `trait`, `marker`, `enum`, or `struct` can be implemented

error: the symbol cannot be implemented
   ╭─ compiler/e2e/test/snapshot/semantic_element/implements_qualified_identifier/invalid_symbol/main.pnx:24:15
   │
24 │ implements[T] Identity[T]::Output:
   │               ^^^^^^^^^^^^^^^^^^^ the symbol `trait type main::Identity::Output` cannot be implemented
   │
   = only `trait`, `marker`, `enum`, or `struct` can be implemented

error: the type cannot be implemented
   ╭─ compiler/e2e/test/snapshot/semantic_element/implements_qualified_identifier/invalid_symbol/main.pnx:38:19
   │
38 │ implements['a, T] Reference['a, T]:
   │                   ^^^^^^^^^^^^^^^^ the type `&'a T` cannot be implemented
   │
   = only `enum`, or `struct` can be implemented

error: the type cannot be implemented
   ╭─ compiler/e2e/test/snapshot/semantic_element/implements_qualified_identifier/invalid_symbol/main.pnx:45:19
   │
45 │ implements['a, T] MutableReference['a, T]:
   │                   ^^^^^^^^^^^^^^^^^^^^^^^ the type `&'a mut T` cannot be implemented
   │
   = only `enum`, or `struct` can be implemented

error: Compilation aborted due to 5 error(s)



stdout:
